# adaptagrams_win_cmake_java

./: CMakeLists.txt  adaptagrams.i  buld_jar.cmd  graphexample.rar
libavoid/: CMakeLists.txt  assertions.h  dllexport.h  libavoid.vcxproj  router.cpp  router.h
libavoid/doc/html/: actioninfo_8h_source.html  annotated.html  assertions_8h_source.html  class_avoid_1_1_box-members.html  class_avoid_1_1_box.html  class_avoid_1_1_checkpoint-members.html  class_avoid_1_1_checkpoint.html  class_avoid_1_1_cluster_ref-members.html  class_avoid_1_1_cluster_ref.html  class_avoid_1_1_conn_end-members.html  class_avoid_1_1_conn_end.html  class_avoid_1_1_conn_ref-members.html  class_avoid_1_1_conn_ref.html  class_avoid_1_1_edge-members.html  class_avoid_1_1_edge.html  class_avoid_1_1_hyperedge_rerouter-members.html  class_avoid_1_1_hyperedge_rerouter.html  class_avoid_1_1_junction_ref-members.html  class_avoid_1_1_junction_ref.html  class_avoid_1_1_point-members.html  class_avoid_1_1_point.html  class_avoid_1_1_polygon-members.html  class_avoid_1_1_polygon.html  class_avoid_1_1_polygon_interface-members.html  class_avoid_1_1_polygon_interface.html  class_avoid_1_1_rectangle-members.html  class_avoid_1_1_rectangle.html  class_avoid_1_1_referencing_polygon-members.html  class_avoid_1_1_referencing_polygon.html  class_avoid_1_1_router-members.html  class_avoid_1_1_router.html  class_avoid_1_1_shape_connection_pin-members.html  class_avoid_1_1_shape_connection_pin.html  class_avoid_1_1_shape_ref-members.html  class_avoid_1_1_shape_ref.html  classes.html  connectionpin_8h.html  connectionpin_8h_source.html  connector_8h.html  connector_8h_source.html  (+51 more)
libavoid/doc/latex/: annotated.tex  class_avoid_1_1_box.tex  class_avoid_1_1_checkpoint.tex  class_avoid_1_1_cluster_ref.tex  class_avoid_1_1_conn_end.tex  class_avoid_1_1_conn_ref.tex  class_avoid_1_1_edge.tex  class_avoid_1_1_hyperedge_rerouter.tex  class_avoid_1_1_junction_ref.tex  class_avoid_1_1_point.tex  class_avoid_1_1_polygon.eps  class_avoid_1_1_polygon.tex  class_avoid_1_1_polygon_interface.eps  class_avoid_1_1_polygon_interface.tex  class_avoid_1_1_rectangle.eps  class_avoid_1_1_rectangle.tex  class_avoid_1_1_referencing_polygon.eps  class_avoid_1_1_referencing_polygon.tex  class_avoid_1_1_router.tex  class_avoid_1_1_shape_connection_pin.tex  class_avoid_1_1_shape_ref.tex  connectionpin_8h.tex  connector_8h.tex  connend_8h.tex  files.tex  geomtypes_8h.tex  hierarchy.tex  hyperedge_8h.tex  index.tex  junction_8h.tex  libavoid_8h.tex  libavoid_example.tex  namespace_avoid.tex  namespaces.tex  obstacle_8h.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  (+6 more)
libavoid/tests/: 2junctions.cpp  endlessLoop01.cpp  hyperedgeLoop1.cpp
libcola/: CMakeLists.txt  colafd.cpp  output_svg.cpp  output_svg.h  svg.hpp
libcola/tests/: graphlayouttest.h  rectangularClusters01.cpp
libdialect/: CMakeLists.txt  commontypes.h  edges.cpp  faces.cpp  graphs.cpp  graphs.h  hola.cpp  nodeconfig.cpp  nodes.cpp  sides.cpp  trees.cpp
libproject/: CMakeLists.txt  project.cpp
libtopology/: CMakeLists.txt
libtopology/tests/: test.h
libvpsc/: CMakeLists.txt  assertions.h
